# rutsubo

./: .gitignore  CLAUDE.md  README.md  demo.cast  pyproject.toml
app/: config.py  main.py  simulation.py
app/db/: database.py
app/models/: agent.py  causal_chain.py  task.py
app/routers/: agents.py  dashboard.py  tasks.py
app/schemas/: agent.py  causal_chain.py  dashboard.py  task.py
app/services/: agent_service.py  coordinator.py  llm.py  payment.py  reviewer.py  task_service.py
scripts/: demo.sh  mock_worker.py  record_demo.sh
tasks/20260407-agent-registration-api/: 002-implementation-plan.md  TODO.md  da-review.md  timeline.md
tasks/20260407-reviewer-payment/: 002-implementation-plan.md  TODO.md  da-review.md  timeline.md
tasks/20260407-task-coordinator/: 002-implementation-plan.md  TODO.md  da-review.md  timeline.md
tasks/20260407-week3-differentiators/: TODO.md  da-review.md  timeline.md
tasks/20260407-week4-traction/: TODO.md  da-review.md  timeline.md
tasks/pitch/: script.md  slides.html
tests/: conftest.py  test_agents.py  test_coordinator_integration.py  test_dashboard.py  test_payment.py  test_reviewer.py  test_simulation.py  test_tasks.py  test_week3_differentiators.py
tests/routers/: test_agents.py  test_dashboard.py  test_tasks.py
tests/services/: test_coordinator.py  test_payment.py  test_reviewer.py
